# wealth-aissistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
migrations/: env.py
migrations/versions/: 001_initial_tables.py  002_cash_flows.py
scripts/initdb/: 01-create-test-db.sql
specs/001-portfolio-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-portfolio-analytics/checklists/: requirements.md
specs/001-portfolio-analytics/contracts/: internal-contracts.md  openapi.yaml
src/wealth_assistant/: config.py  observability.py
src/wealth_assistant/aggregation/: factory.py  fake.py  plaid_adapter.py  port.py
src/wealth_assistant/analytics/: allocation.py  consolidation.py  performance.py  risk.py
src/wealth_assistant/api/: app.py  deps.py  limiter.py  routes_account.py  routes_auth.py  routes_portfolio.py  schemas.py
src/wealth_assistant/domain/: errors.py  fx.py  money.py
src/wealth_assistant/mcp/: server.py
src/wealth_assistant/persistence/: crypto.py  db.py  models.py  repositories.py
src/wealth_assistant/scheduler/: app.py  jobs.py
src/wealth_assistant/services/: account_service.py  auth_service.py  connection_service.py  portfolio_service.py  snapshot_service.py
src/wealth_assistant/ui/: app.py
tests/: conftest.py  test_imports.py
tests/contract/: test_auth_contract.py  test_mcp_contract.py  test_portfolio_contract.py  test_privacy_contract.py
tests/integration/: test_account_deletion.py  test_auth_ratelimit.py  test_cash_flows.py  test_plaid_adapter.py  test_snapshot_service.py  test_us1_portfolio.py  test_us2_analytics.py  test_us3_risk.py
tests/unit/: test_allocation_performance.py  test_config.py  test_consolidation.py  test_crypto.py  test_fx.py  test_money.py  test_performance_pass.py  test_risk.py
